--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "@clerk/nextjs": "^6.9.10",
+    "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3",
+    "inngest": "^3.29.3",
+    "lucide-react": "^0.471.1",
+    "next": "15.1.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "drizzle-kit": "^0.30.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
