Gemini AI model integrated and Chapters and flashcard features are added

--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.10",
+    "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "drizzle-orm": "^0.38.3",
+    "embla-carousel-react": "^8.5.2",
     "inngest": "^3.29.3",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "react": "^18",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^18",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "drizzle-kit": "^0.30.1",
