--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv-cli": "^8.0.0",
     "drizzle-orm": "^0.38.3",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.0.1",
     "inngest": "^3.30.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
@@ -31,6 +32,7 @@
     "react-card-flip": "^1.2.3",
     "react-dom": "^18",
     "sonner": "^1.7.2",
+    "stripe": "^17.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
