--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.9.10",
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
@@ -27,7 +28,7 @@
     "inngest": "^3.30.0",
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-card-flip": "^1.2.3",
     "react-dom": "^18",
