--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,39 @@
-name: Deploy Next.js App to EC2 (Docker)
+name: Build & Deploy Next.js (Docker) to EC2
 
 on:
   push:
     branches: [ "master" ]
 
 jobs:
-  deploy:
+  build_and_push:
+    name: Build Docker Image & Push to Docker Hub
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to EC2 via SSH
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/edusphere-ai:latest
+
+  deploy_to_ec2:
+    name: Deploy to EC2 via SSH
+    needs: build_and_push
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: SSH into EC2 and deploy
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -21,14 +42,13 @@ jobs:
           script: |
             cd /home/ubuntu/EduSphere-AI
 
-            echo "[1] Pulling latest code..."
-            git pull origin main
+            echo "[1] Stopping old containers..."
+            docker compose down || true
 
-            echo "[2] Rebuilding Docker images..."
-            docker compose down
-            docker compose build
+            echo "[2] Pulling latest image from Docker Hub..."
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/edusphere-ai:latest
 
-            echo "[3] Starting containers..."
+            echo "[3] Starting with updated image..."
             docker compose up -d --force-recreate
 
-            echo "[4] Deployment completed successfully."
+            echo "[4] Deployment finished!"
